// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs tabs should match snapshot and display lengths if isLoading prop equal false 1`] = `
<div>
  <div
    class="sc-fXynhf gkrgIr"
  >
    <span
      class="sc-dwLEzm evKonw"
    >
      pokemons
       
      (10)
    </span>
    <span
      class="sc-dwLEzm bbVbKj"
    >
      moves
       
      (15)
    </span>
    <span
      class="sc-dwLEzm bbVbKj"
    >
      types
       
      (20)
    </span>
  </div>
</div>
`;

exports[`Tabs tabs should match snapshot and should not display lengths if isLoading prop equals true 1`] = `
<div>
  <div
    class="sc-fXynhf gkrgIr"
  >
    <span
      class="sc-dwLEzm evKonw"
    >
      pokemons
       
    </span>
    <span
      class="sc-dwLEzm bbVbKj"
    >
      moves
       
    </span>
    <span
      class="sc-dwLEzm bbVbKj"
    >
      types
       
    </span>
  </div>
</div>
`;
